import "descriptor.proto";

option java_package = "org.eclipselab.emf.ecore.protobuf";
option java_outer_classname = "EcoreProtos";

message EPackageProto {
	required string uri = 1;
	repeated int32 dependency = 2;
	optional .google.protobuf.FileDescriptorProto definition = 3;
}

message EResourceProto {
	repeated EPackageProto epackage = 1;
	repeated EObjectProto eobject = 2;
}

message EObjectProto {
	required int32 epackage_index = 1;
	required int32 eclass_index = 2;
	required bytes data = 3;
}